Rewrote TomEE Remote adapter Finished Tomcat+Tomee.war adapter TOMEE-127, TOME-136 TOMEE-137: Arquillian.xml properties overridable as system properties for TomEE adapters
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1243396 13f79535-47bb-0310-9956-ffa450edef68